Fix chartPointStyle on search, multi-districts z-index

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -252,7 +252,7 @@
   .visualize-nav {
     top: 117px;
     padding-top: 15px;
-    z-index: 99999;
+    z-index: 999;
     background: white;
 
     @media (max-width: 992px) {
